--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,13 +20,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="">Home</a>
-                <a class="nav-link" href="">Add product</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'products' %}">Products</a>
+                <a class="nav-link active" href="{% url 'product_add' %}">Add Product</a>
+                <a class="nav-link active" href="{% url 'category_add' %}">Add Category</a>
             </div>
         </div>
     </div>
 </nav>
+<div class="container">
 {% block content %}
-{% endblock %}
+{% endblock %} 
+</div>
 </body>
 </html>
