--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,25 @@
 {% block title %}Main Page{% endblock %}
 
 {% block content %}
+    <br>
+    <div class="row d-flex justify-content-center">
+        {% for product in products %}
+            <div class="card mb-6" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="{{ product.image.url }}" class="img-fluid rounded-start" alt="image">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ product.name }}</h5>
+                            <p class="card-title">{{ product.get_category }}</p>
+                            <h6 class="card-text">Price: {{ product.price }}</h6>
+                            <a href="{% url 'product' product.pk %}">see more >>></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    
 {% endblock %}
