fixed product template, changed image

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <div class="card mb-6" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ product.image.url }}" class="img-fluid rounded-start" alt="image">
+                        <img src="{{ product.image.url }}" class="img-fluid rounded-start" alt="{{ product.name }} image">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
