--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,13 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand" href="">Store</a>
+        <a class="navbar-brand me-auto" href="">Store</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav ms-auto">
                 <a class="nav-link active" aria-current="page" href="{% url 'products' %}">Products</a>
                 <a class="nav-link active" href="{% url 'product_add' %}">Add Product</a>
                 <a class="nav-link active" href="{% url 'category_add' %}">Add Category</a>
@@ -29,7 +29,7 @@
 </nav>
 <div class="container">
 {% block content %}
-{% endblock %} 
+{% endblock %}
 </div>
 </body>
 </html>
