--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
                 <a class="nav-link active" aria-current="page" href="{% url 'products' %}">Products</a>
+                <a class="nav-link active" href="{% url 'categories' %}">Categories</a>
                 <a class="nav-link active" href="{% url 'product_add' %}">Add Product</a>
                 <a class="nav-link active" href="{% url 'category_add' %}">Add Category</a>
             </div>
