--- a/templates/product.html
+++ b/templates/product.html
@@ -13,6 +13,7 @@
                     <p class="card-text">{{ product.get_category }}</p>
                     <p class="card-text">{{ product.description }}</p>
                     <h5 class="card-text">Price: {{ product.price }}</h5>
+                    <p class="card-title">{{ product.quantity }} left</p>
                     <p class="card-text"><small class="text-body-secondary">Added: {{ product.created_at }}</small></p>
                     <a href="{% url 'product_edit' product.pk %}" class="btn btn-primary">Edit</a>
                     <a href="{% url 'product_delete' product.pk %}" class="btn btn-danger">Delete</a>
