--- a/templates/categories.html
+++ b/templates/categories.html
@@ -19,8 +19,30 @@
                 <td>{{ category.name }}</td>
                 <td>{{ category.description }}</td>
                 <td><a href="{% url 'category_edit' category.pk %}" class="btn btn-primary">Edit</a></td>
-                <td><a href="{% url 'category_delete' category.pk %}" class="btn btn-danger">Delete</a></td>
+                <td>
+                    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Delete
+                    </button>
+                </td>
             </tr>
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Delete Category</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to delete "{{ category.name }}"?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <a href="{% url 'category_delete' category.pk %}" type="button"
+                               class="btn btn-danger">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
         </tbody>
     </table>
