--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand me-auto" href="">Store</a>
+        <a class="navbar-brand me-auto" href="{% url 'products' %}">Store</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
