--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <br>
     <div class="row">
         <div class="col-md-11">
-            <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-evenly">
+            <div class="row row-cols-md-2 g-4">
                 {% for product in products %}
                     <div class="card mb-6" style="max-width: 540px;">
                         <div class="row g-0">
@@ -29,10 +29,10 @@
             </div>
         </div>
         <div class="col-md-1">
-            <form action="{% url 'products_filtered' %}" method="get">
+            <form action="{% url 'products' %}" method="get">
                 {% for category in categories %}
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="pk" value="{{ category.pk }}"
+                        <input class="form-check-input" type="radio" name="name" value="{{ category.name }}"
                                id="flexCheckDefault">
                         <label class="form-check-label" for="flexCheckDefault">
                             {{ category.name }}
@@ -42,5 +42,6 @@
                 <button type="submit" class="btn btn-success">Filter</button>
             </form>
         </div>
+    {% include 'partials/pagination.html' %}
     </div>
 {% endblock %}
