added search for products and moved 'adding' link into dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,24 +13,40 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand me-auto" href="{% url 'products' %}">Store</a>
+        <a class="navbar-brand" href="{% url 'products' %}">Store</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-                <a class="nav-link active" aria-current="page" href="{% url 'products' %}">Products</a>
-                <a class="nav-link active" href="{% url 'categories' %}">Categories</a>
-                <a class="nav-link active" href="{% url 'product_add' %}">Add Product</a>
-                <a class="nav-link active" href="{% url 'category_add' %}">Add Category</a>
-            </div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                        href="{% url 'products' %}">Products</a>
+                </li>
+                <li class="nav-item"><a class="nav-link active" href="{% url 'categories' %}">Categories</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">Add</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'product_add' %}">Add
+                            Product</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="{% url 'category_add' %}">Add
+                            Category</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex" role="search" method="get">
+                <input name="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </div>
     </div>
 </nav>
 <div class="container">
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 </div>
 </body>
 </html>
