added AddToCart view to add products in cart

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
                                     <a href="{% url 'product' product.pk %}"
                                        class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">see
                                         more >>></a>
+                                    <div><a href="{% url 'add_to_cart' product.pk %}" class="btn btn-sm btn-primary">Add to cart</a></div>
                                 </div>
                             </div>
                         </div>
