--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
                                         href="{% url 'products' %}">Products</a>
                 </li>
                 <li class="nav-item"><a class="nav-link active" href="{% url 'categories' %}">Categories</a></li>
+                <li class="nav-item"><a class="nav-link active" href="{% url 'cart' %}">Cart</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link active dropdown-toggle" href="#" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">Add</a>
