--- a/templates/product.html
+++ b/templates/product.html
@@ -5,7 +5,7 @@
     <div class="card mb-12">
         <div class="row g-0">
             <div class="col-md-6">
-                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }} image">
+                <img style="max-width: 500px; max-height: 600px" src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }} image">
             </div>
             <div class="col-md-6">
                 <div class="card-body">
@@ -18,6 +18,9 @@
                     <a href="{% url 'product_edit' product.pk %}" class="btn btn-primary">Edit</a>
                     <button data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="btn btn-danger">Delete
                     </button>
+                    <br>
+                    <br>
+                    <div><a href="{% url 'add_to_cart' product.pk %}" class="btn btn-primary">Add to cart</a></div>
                 </div>
             </div>
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
