--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,13 @@
                                     <a href="{% url 'product' product.pk %}"
                                        class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">see
                                         more >>></a>
-                                    <div><a href="{% url 'add_to_cart' product.pk %}" class="btn btn-sm btn-primary">Add to cart</a></div>
+                                    <form method="get" action="{% url 'add_to_cart' product.pk %}">
+                                        <label for="qtyInput">
+                                            <input class="form-control" name="qty" id="qtyInput" type="number" min="1"
+                                                   max="{{ product.quantity }}">
+                                        </label>
+                                        <button type="submit" class="btn btn-primary">Add to cart</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -40,9 +46,9 @@
                         </label>
                     </div>
                 {% endfor %}
-                <button type="submit" class="btn btn-success">Filter</button>
+                <button type="submit" class="btn btn-primary">Filter</button>
             </form>
         </div>
-    {% include 'partials/pagination.html' %}
+        {% include 'partials/pagination.html' %}
     </div>
 {% endblock %}
