created separated directories for templates added Order model and form added ordering page

--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -34,4 +34,8 @@
 {% endfor %}
 </tbody>
 </table>
+    <br>
+    {% if cart %}
+    <a href="{% url 'create_order' %}" class="btn btn-primary">Order</a>
+    {% endif %}
 {% endblock %}
